<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_blue"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/draw_btnNext"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/lanjut"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/view5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waktu"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/practice_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/practice_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kesempatan"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/practice_change" />

        <TextView
            android:id="@+id/practice_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:text="@string/skor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <TextView
            android:id="@+id/practice_question"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/soal"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/practice_score"
            app:layout_constraintVertical_weight="1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="470dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/drawColor"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:tooltipText="Color"
                    android:layout_marginVertical="8dp"
                    android:src="@drawable/ic_color_lens_black_24dp"
                    app:layout_constraintEnd_toStartOf="@+id/drawEmboss"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/drawEmboss"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:tooltipText="Emboss"
                    android:src="@drawable/ic_colorize_black_24dp"
                    app:layout_constraintEnd_toStartOf="@+id/drawBlur"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/drawColor"
                    app:layout_constraintTop_toTopOf="@+id/drawColor" />

                <ImageButton
                    android:id="@+id/drawBlur"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:tooltipText="Blur"
                    android:src="@drawable/ic_blur_on_black_24dp"
                    app:layout_constraintEnd_toStartOf="@+id/drawAtop"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/drawEmboss"
                    app:layout_constraintTop_toTopOf="@+id/drawEmboss" />

                <ImageButton
                    android:id="@+id/drawAtop"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:tooltipText="srcAtop"
                    android:src="@drawable/ic_branding_watermark_black_24dp"
                    app:layout_constraintEnd_toStartOf="@+id/drawErase"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/drawBlur"
                    app:layout_constraintTop_toTopOf="@+id/drawBlur" />

                <ImageButton
                    android:id="@+id/drawErase"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:tooltipText="Erase"
                    android:src="@drawable/ic_eraser"
                    app:layout_constraintEnd_toStartOf="@+id/drawSave"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/drawAtop"
                    app:layout_constraintTop_toTopOf="@+id/drawAtop" />

                <ImageButton
                    android:id="@+id/drawSave"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:tooltipText="Save"
                    android:src="@drawable/ic_save_black_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/drawErase"
                    app:layout_constraintTop_toTopOf="@+id/drawErase" />

                <FrameLayout
                    android:id="@+id/frameDraw"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/drawColor" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>