<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.05" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.05" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ImageView
            android:id="@+id/winner_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/border" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center">

                <TextView
                    android:id="@+id/winner_tvRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_string"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/winner_tvsWord1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kata_penduduk"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/winner_tvsWord2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kata_pendatang"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/winner_btnReplay"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/checklis"
                    android:scaleType="fitCenter"
                    tools:ignore="NestedWeights" />

                <ImageButton
                    android:id="@+id/winner_btnPraktik"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/praktik"
                    android:scaleType="fitCenter" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>